src/test/ui/parser/issue-32214.stderr
error: incorrect parameter order
  --> $DIR/issue-32214.rs:4:25
   |
LL | pub fn test<W, I: Trait<Item=(), W> >() {}
   |                         ^^^^^^^^^^ help: reorder the arguments: `W, Item = ()`

error: aborting due to previous error

